--- a/projet/requirements.txt
+++ b/projet/requirements.txt
@@ -16,3 +16,13 @@ plotly>=5.11.0
 # Utilitaires
 pyyaml>=6.0
 python-dateutil>=2.8.2
+
+streamlit
+pandas
+numpy
+joblib
+tensorflow
+lifelines
+openpyxl
+scikit-learn
+scikit-survival
